src/test/ui/internal/internal-unstable-const.stderr
error[E0723]: loops and conditional expressions are not stable in const fn
  --> $DIR/internal-unstable-const.rs:7:5
   |
LL |     if true { 4 } else { 5 }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see issue https://github.com/rust-lang/rust/issues/57563
   = help: add `#![feature(const_fn)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0723`.
